--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
+/config/application.rb.bak
+
+# Ignore master key for decrypting credentials and more.
 /config/master.key
 
 # Ignore node_modules
